# Snake

./: CMakeLists.txt  README.MD
Snake/: AIService.cpp  AIService.h  CMakeLists.txt  GameLogicService.cpp  GameLogicService.h  GameLoopService.cpp  GameLoopService.h  GameModels.h  GameStateHolder.cpp  GameStateHolder.h  GameStateRingBuffer.cpp  GameStateRingBuffer.h  InputService.cpp  InputService.h  Main.cpp  MyCanvas.cpp  RenderService.cpp  RenderService.h  Snake.cpp  main.cc
Snake/resources/: CMakeLists.txt
Snake/src/: serialization.h  snake_api.h  util.h
Snake/src/ai/: a_star.h  ai_service.h  i_path_find_request.h  pathfinder.h
Snake/src/ai/impl/: a_star.cc  a_star_dp.cc  ai_service.cc  pathfinder.cc
Snake/src/model/: common_models.h  direction.h  game_event.h  game_object.h  game_settings.h  game_state.h  grid.h  grid_cell.h  player_input.h  ring_buffer.h
Snake/src/service/: AIService.h  GameLogicService.h  GameLoopService.h  GameModels.h  InputService.h  Pathfinder.h  RenderService.h  ai_service.h  game_logic_service.h  game_loop_service.h  game_models.h  game_state_service.h  input_service.h  render_service.h  snake_service.h  v2_ai_service.h  v2_food_service.h  v2_game_state_service.h
Snake/src/service/ai/impl/: a_star_dp.cc
Snake/src/service/impl/: AIService.cpp  GameLogicService.cpp  GameLoopService.cpp  GameStateHolder.cpp  InputService.cpp  Pathfinder.cpp  RenderService.cpp  Snake.cpp  ai_service.cc  game_logic_service.cc  game_loop_service.cc  game_state_service.cc  input_service.cc  pathfinder.cc  render_service.cc  snake.cc
Snake/src/ui/: cursor.cc  layout_service.h  resource_manager.h  ui_service.h
Snake/src/ui/impl/: button.cc  grid.cc  groupable.cc  image.cc  label.cc  layout.cc  tile_map.cc
Snake/src/v2/: a_star.h  util.h  v2_ai_service.h  v2_food_service.h  v2_game_state_service.h
Snake/src/v2/impl/: a_star_dp.cc
Snake/src/v2/model/: game_state.h  grid.h  ring_buffer.h
Snake/src/win32/: MainWindow.cpp  MainWindow.h  base_window.h  main_window.cc  main_window.h
Snake/test/: AIService_test.cpp  CoordOperationTest.cpp  GameStateBufferTest.cpp  PathfinderTest.cpp  SnakeIsCollideTest.cpp  SnakeIsInBoundTest.cpp  SnakeIsValidTest.cpp  SnakeMoveTest.cpp  SnakeTest.cpp  a_star_pathfinder_test.cc  coord_operation_test.cc  game_state_buffer_exception_safety_test.cc  game_state_buffer_test.cc  grid.cc  grid_find_adjacents.cc  grid_serialization.cc  pathfinder_test.cc  snake_is_collide_test.cc  snake_is_in_bound_test.cc  snake_is_valid_test.cc  snake_move_test.cc
Snake/util/: log.cpp  log.h
Snake/windows/: BaseWindow.h  MainWindow.cpp  MainWindow.h
